# Clienvix

./: .gitignore  CHANGELOG.md  README.md  config.json  icono_owner.txt  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml
modulos/: c_json.py  conect.py  core_filter.py  edit.py  menu.py  s_mail.py  states.py
modulos/connection/: conect.py  config.py  ratelimiter.py
modulos/core_data/: core_filter.py  exportar_excel.py  metodo_estaticos.py
modulos/mail/: config_mail.py  s_mail.py
modulos/menu/: menu.py
