[project]
name = "clienvix"
version = "1.4"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pwinput>=1.0.3",
    "requests>=2.32.5",
    "rich>=15.0.0",
    "setuptools>=82.0.0",
    "tqdm>=4.67.3",
]
